--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:     Astra Child
-Theme URI:      https://github.com/MDMDevOps/astra-child
+Theme Name:     asdf
+Theme URI:      url
 Template:       astra
 Author:         Mid-West Family Madison
 Author URI:     https://www.midwestfamilymadison.com
-Description:    Custom Astra Child Theme
+Description:    Custom Child Theme
 Version:        1.0.0
 License:        GNU General Public License v3.0 (or later)
 License URI:    https://www.gnu.org/licenses/gpl-3.0.html
